--- a/src/app/card-form/card-form.component.html
+++ b/src/app/card-form/card-form.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="cardForm">
   <input formControlName="name" />
-  <div *ngIf="cardForm.controls['name'].errors?.['required']">
+  <div *ngIf="cardForm.controls['name'].dirty && cardForm.controls['name'].touched && cardForm.controls['name'].errors?.['required']">
     Value is required.
   </div>
   <div *ngIf="cardForm.controls['name'].errors?.['minlength']">
@@ -11,7 +11,7 @@
     characters.
   </div>
 </form>
-
+<hr>
 
 <div>Form Contents: {{ cardForm.value | json }}</div>
 <div>Form is valid: {{ cardForm.valid }}</div>
