--- a/src/app/card-form/card-form.component.html
+++ b/src/app/card-form/card-form.component.html
@@ -1,3 +1,13 @@
+<div class="columns">
+  <div class="column">
+<app-card 
+  [name]="cardForm.value.name"
+  [cardNumber]="cardForm.value.cardNumber"
+  [expiration]="cardForm.value.expiration"
+></app-card>
+  </div>
+
+  <div class="column">
 <form [formGroup]="cardForm" (ngSubmit)="onSubmit()">
   <app-input label="Name" [control]="cardForm.get('name')"></app-input>
   <app-input label="Card Number" [control]="cardForm.get('cardNumber')"></app-input>
@@ -14,6 +24,8 @@
   <button class="button is-warning" type="button" (click)="onResetClick()">Reset</button>
   </div>
 </form>
+</div>
+</div>
 <!-- <hr>
 
 <div>Form Contents: {{ cardForm.value | json }}</div>
